--- a/style.css
+++ b/style.css
@@ -95,3 +95,9 @@ a.font-black {
 #projects .card-title {
     font-weight: bold;
 }
+
+#video {
+    width: 100%;
+    max-height: 270px;
+    background-color: #000;
+}
